# ebpm-control

./: README.md  arc.nc  cad.nc  cad2.nc  cad3.nc  circles.nc  cyllind.nc  drops_grad.nc  drops_step2.nc  drops_step2adv.nc  fcc.nc  height1.nc  large_cyl.nc  main.nc  main.py  mill.nc  pyproject.toml  small_syl.nc
